2008-02-11  Eyal Alaluf <eyala@mainsoft.com>

	* NumberFormatterTest.cs: Test +-Infinity & NaN ToString ("R")

2008-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* CharCategoryTest.cs: Fixed line endings.
	* CharTest.cs: Fixed line endings.
	* MulticasrDelegate.cs: Fixed line endings.
	* ExceptionTest.cs: Fixed line endings.

2008-02-02  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeTest.cs (InvokeMember_WithoutDefaultValue): Fixed assert to
	allow test to pass on MS too.

2008-01-24  Rodrigo Kumpera  <rkumpera@novell.com>

	* TypeTest.cs (InvokeMember_WithoutDefaultValue): Added test for bug #348522.
	It call InvokeMember passing as method argument Missing.Value and a binder that
	returns a method that doesn't have a default value for it's parameter.

2008-01-21  Gert Driesen  <drieseng@users.sourceforge.net>

        * AppDomainTest.cs: Added DefineDynamicAssembly tests for invalid
        AssemblyBuilderAccess argument. Enabled test for DefineDynamicAssembly
        overload taking IEnumerable<CustomAttributeBuilder>. Fixed typo in
        comments.

2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>

	* DateTimeOffsetTest.cs: Add test case for Equals to validate 
	Gendarme's finding.

2008-01-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* AppDomainTest.cs: Added test for DefineDynamicAssembly overload
	taking IEnumerable<CustomAttributeBuilder>.
	* EnvironmentCas.cs: Fixed line ending.

2008-01-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* TypeTest.cs: Added test for GetConstructor (Type []).

2008-01-15  Stephane Delcroix  <sdelcroix@novell.com>

	* DateTimeOffsetTest.cs: tests for parsing f, F, s

2008-01-15  Stephane Delcroix  <sdelcroix@novell.com>

	* DateTimeOffsetTest.cs: more tests, less bugs.

2008-01-14  Eyal Alaluf <eyala@mainsoft.com>

	* DoubleTest.cs: Test +-Infinity & NaN default ToString (bug #353603)

2008-01-14  Stephane Delcroix  <sdelcroix@novell.com>
